// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobile theme Alert base 1`] = `
Object {
  "Card": Object {
    "component": null,
    "props": Object {
      "block": true,
      "borderColor": "gray12",
      "borderWidth": 1,
      "pb": 12,
      "pl": 16,
      "pr": 16,
      "pt": 10,
      "rounded": 5,
    },
    "style": Object {},
  },
  "Close": Object {
    "component": #IconCross,
    "props": Object {
      "bgActive": "black16",
      "bgHover": "black8",
      "color": "gray28",
      "pb": 4,
      "pl": 4,
      "position": "absolute",
      "pr": 4,
      "pt": 4,
      "right": 4,
      "rounded": "circle",
      "size": "s",
      "top": 4,
    },
    "style": Object {},
  },
  "Content": Object {
    "component": null,
    "props": Object {
      "pb": 0,
      "pl": 0,
      "pr": 0,
      "pt": 0,
    },
    "style": Object {},
  },
  "Image": Object {
    "component": null,
    "props": Object {
      "mr": 12,
      "order": 0,
      "size": 20,
      "valignSelf": "top",
    },
    "style": Object {},
  },
}
`;

exports[`mobile theme Alert fuzz: column 1`] = `Object {}`;

exports[`mobile theme Alert fuzz: column=false 1`] = `Object {}`;

exports[`mobile theme Alert fuzz: variant="error" 1`] = `
Object {
  "Card": Object {
    "props": Object {
      "bg": "red100",
      "borderColor": "transparent",
    },
  },
  "Image": Object {
    "props": Object {
      "color": "red500",
    },
  },
}
`;

exports[`mobile theme Alert fuzz: variant="primary" 1`] = `
Object {
  "Card": Object {
    "props": Object {
      "bg": "blue50",
      "borderColor": "transparent",
    },
  },
  "Image": Object {
    "props": Object {
      "color": "blue600",
    },
  },
}
`;

exports[`mobile theme Alert fuzz: variant="secondary" 1`] = `
Object {
  "Card": Object {
    "props": Object {
      "bg": "gray4",
      "borderColor": "transparent",
    },
  },
  "Image": Object {
    "props": Object {
      "color": "gray64",
    },
  },
}
`;

exports[`mobile theme Alert fuzz: variant="success" 1`] = `
Object {
  "Card": Object {
    "props": Object {
      "bg": "green100",
      "borderColor": "transparent",
    },
  },
  "Image": Object {
    "props": Object {
      "color": "green600",
    },
  },
}
`;

exports[`mobile theme Alert fuzz: variant="warning" 1`] = `
Object {
  "Card": Object {
    "props": Object {
      "bg": "orange50",
      "borderColor": "transparent",
    },
  },
  "Image": Object {
    "props": Object {
      "color": "orange700",
    },
  },
}
`;

exports[`mobile theme Alert snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Object {
      "props": Object {
        "block": true,
        "borderColor": "gray12",
        "borderWidth": 1,
        "pb": 12,
        "pl": 16,
        "pr": 16,
        "pt": 10,
        "rounded": 5,
      },
      "variant": Object {
        "error": Object {
          "props": Object {
            "bg": "red100",
            "borderColor": "transparent",
          },
        },
        "primary": Object {
          "props": Object {
            "bg": "blue50",
            "borderColor": "transparent",
          },
        },
        "secondary": Object {
          "props": Object {
            "bg": "gray4",
            "borderColor": "transparent",
          },
        },
        "success": Object {
          "props": Object {
            "bg": "green100",
            "borderColor": "transparent",
          },
        },
        "warning": Object {
          "props": Object {
            "bg": "orange50",
            "borderColor": "transparent",
          },
        },
      },
    },
    "Close": Object {
      "component": #IconCross,
      "props": Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "pb": 4,
        "pl": 4,
        "position": "absolute",
        "pr": 4,
        "pt": 4,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
      },
    },
    "Content": Object {
      "props": Object {
        "pb": 0,
        "pl": 0,
        "pr": 0,
        "pt": 0,
      },
    },
    "Image": Object {
      "column": Object {
        "props": Object {
          "order": 0,
        },
      },
      "props": Object {
        "mr": 12,
        "order": 0,
        "size": 20,
        "valignSelf": "top",
      },
      "variant": Object {
        "error": Object {
          "props": Object {
            "color": "red500",
          },
        },
        "primary": Object {
          "props": Object {
            "color": "blue600",
          },
        },
        "secondary": Object {
          "props": Object {
            "color": "gray64",
          },
        },
        "success": Object {
          "props": Object {
            "color": "green600",
          },
        },
        "warning": Object {
          "props": Object {
            "color": "orange700",
          },
        },
      },
    },
  },
}
`;

exports[`mobile theme Avatar base 1`] = `
Object {
  "Badge": Object {
    "component": null,
    "props": Object {
      "bottom": 0,
      "height": 5,
      "position": "absolute",
      "right": 0,
      "width": 5,
    },
    "style": Object {},
  },
  "Fallback": Object {
    "component": #IconUser,
    "props": Object {
      "size": 9.6,
    },
    "style": Object {},
  },
  "Wrapper": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "gray4",
      "color": "white",
      "fontSize": 12,
      "height": 20,
      "overlayActive": "black24",
      "overlayDisabled": "rgba(255, 255, 255, 0.5)",
      "shape": "circle",
      "valignSelf": "middle",
      "width": 20,
    },
  },
}
`;

exports[`mobile theme Avatar fuzz: isFallback 1`] = `
Object {
  "Wrapper": Object {
    "style": Object {
      "color": "gray28",
      "valign": "middle",
    },
  },
}
`;

exports[`mobile theme Avatar fuzz: isFallback=false 1`] = `Object {}`;

exports[`mobile theme Avatar fuzz: size=20 1`] = `Object {}`;

exports[`mobile theme Avatar fuzz: size=45 1`] = `
Object {
  "Badge": Object {
    "props": Object {
      "height": 11.25,
      "width": 11.25,
    },
  },
  "Fallback": Object {
    "props": Object {
      "size": 21.599999999999998,
    },
  },
  "Wrapper": Object {
    "style": Object {
      "fontSize": 27,
      "height": 45,
      "width": 45,
    },
  },
}
`;

exports[`mobile theme Avatar fuzz: size=60 1`] = `
Object {
  "Badge": Object {
    "props": Object {
      "height": 15,
      "width": 15,
    },
  },
  "Fallback": Object {
    "props": Object {
      "size": 28.799999999999997,
    },
  },
  "Wrapper": Object {
    "style": Object {
      "fontSize": 36,
      "height": 60,
      "width": 60,
    },
  },
}
`;

exports[`mobile theme Avatar fuzz: type="company" 1`] = `
Object {
  "Fallback": Object {
    "component": #IconCompanyUser,
  },
}
`;

exports[`mobile theme Avatar fuzz: type="person" 1`] = `Object {}`;

exports[`mobile theme Avatar fuzz: type="shop" 1`] = `
Object {
  "Fallback": Object {
    "component": #IconShopUser,
  },
  "Wrapper": Object {
    "style": Object {
      "borderRadius": 5,
      "shape": undefined,
    },
  },
}
`;

exports[`mobile theme Avatar snap 1`] = `
Object {
  "defaultProps": Object {
    "size": 20,
    "type": "person",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Badge": Object {
      "props": Object {
        "bottom": 0,
        "height": [Function],
        "position": "absolute",
        "right": 0,
        "width": [Function],
      },
    },
    "Fallback": Object {
      "component": #IconUser,
      "props": Object {
        "size": [Function],
      },
      "type": Object {
        "company": Object {
          "component": #IconCompanyUser,
        },
        "shop": Object {
          "component": #IconShopUser,
        },
      },
    },
    "Wrapper": Object {
      "isFallback": Object {
        "style": Object {
          "align": "center",
          "bg": "gray4",
          "color": "gray28",
          "valign": "middle",
        },
      },
      "style": Object {
        "align": "center",
        "bg": "gray4",
        "color": "white",
        "fontSize": [Function],
        "height": [Function],
        "overlayActive": "black24",
        "overlayDisabled": "rgba(255, 255, 255, 0.5)",
        "shape": "circle",
        "valignSelf": "middle",
        "width": [Function],
      },
      "type": Object {
        "shop": Object {
          "style": Object {
            "borderRadius": 5,
            "shape": undefined,
          },
        },
      },
    },
  },
}
`;

exports[`mobile theme Badge base 1`] = `Object {}`;

exports[`mobile theme Badge fuzz: gapColor="red500" 1`] = `Object {}`;

exports[`mobile theme Badge fuzz: gapSize=0 1`] = `Object {}`;

exports[`mobile theme Badge fuzz: gapSize=4 1`] = `Object {}`;

exports[`mobile theme Badge snap 1`] = `
Object {
  "defaultProps": Object {
    "gapColor": "white",
    "gapSize": 2,
  },
  "mapProps": [Function],
  "scheme": Object {},
}
`;

exports[`mobile theme Banner base 1`] = `
Object {
  "Card": Object {
    "component": null,
    "props": Object {
      "block": true,
      "rounded": 5,
    },
    "style": Object {},
  },
  "Close": Object {
    "component": #IconCross,
    "props": Object {
      "bgActive": "black16",
      "bgHover": "black8",
      "color": "gray28",
      "pb": 4,
      "pl": 4,
      "position": "absolute",
      "pr": 4,
      "pt": 4,
      "right": 4,
      "rounded": "circle",
      "size": "s",
      "top": 4,
    },
    "style": Object {},
  },
  "Content": Object {
    "component": null,
    "props": Object {
      "pb": 16,
      "pl": 16,
      "pr": 16,
      "pt": 10,
    },
    "style": Object {},
  },
  "Image": Object {
    "component": null,
    "props": Object {
      "order": 1,
      "pb": 0,
      "pl": 0,
      "pr": 0,
      "pt": 0,
    },
    "style": Object {},
  },
}
`;

exports[`mobile theme Banner fuzz: column 1`] = `
Object {
  "Content": Object {
    "props": Object {
      "pb": 10,
      "pl": 10,
      "pr": 10,
    },
  },
  "Image": Object {
    "props": Object {
      "order": 0,
    },
  },
}
`;

exports[`mobile theme Banner fuzz: column=false 1`] = `Object {}`;

exports[`mobile theme Banner snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Object {
      "props": Object {
        "block": true,
        "rounded": 5,
      },
    },
    "Close": Object {
      "component": #IconCross,
      "props": Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "pb": 4,
        "pl": 4,
        "position": "absolute",
        "pr": 4,
        "pt": 4,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
      },
    },
    "Content": Object {
      "column": Object {
        "props": Object {
          "pb": 10,
          "pl": 10,
          "pr": 10,
          "pt": 10,
        },
      },
      "image": Object {
        "props": Object {
          "pr": 8,
        },
      },
      "props": Object {
        "pb": 16,
        "pl": 16,
        "pr": 16,
        "pt": 10,
      },
    },
    "Image": Object {
      "column": Object {
        "props": Object {
          "order": 0,
        },
      },
      "props": Object {
        "order": 1,
        "pb": 0,
        "pl": 0,
        "pr": 0,
        "pt": 0,
      },
    },
  },
}
`;

exports[`mobile theme Button base 1`] = `
Object {
  "Button": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue600",
      "bgChecked": "blue600",
      "bgDisabled": "blue300",
      "borderColor": "transparent",
      "borderRadius": 5,
      "borderStyle": "solid",
      "borderWidth": 1,
      "color": "white",
      "colorDisabled": "blue50",
      "focus": false,
      "minHeight": "m",
      "pb": 6,
      "pl": 16,
      "pr": 16,
      "pt": 6,
    },
  },
  "IconAfter": Object {
    "component": null,
    "props": Object {
      "size": "s",
    },
    "style": Object {},
  },
  "IconBefore": Object {
    "component": null,
    "props": Object {
      "size": "s",
    },
    "style": Object {},
  },
  "Spinner": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Text": Object {
    "component": null,
    "props": Object {
      "crop": true,
      "dense": true,
      "ml": -1,
      "size": "m",
      "valignSelf": "middle",
    },
    "style": Object {},
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green800",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green800",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green800",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green800",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bgActive": "blue800",
      "bgChecked": undefined,
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bgActive": "blue800",
      "bgChecked": undefined,
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray68",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray76",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray68",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray76",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray68",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray76",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray68",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray76",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgChecked": undefined,
      "bgDisabled": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgChecked": undefined,
      "bgDisabled": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgChecked": undefined,
      "bgDisabled": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgChecked": undefined,
      "bgDisabled": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray4",
      "bgChecked": undefined,
      "bgDisabled": "white",
      "color": "blue500",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray4",
      "bgChecked": undefined,
      "bgDisabled": "white",
      "color": "blue500",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray4",
      "bgChecked": undefined,
      "bgDisabled": "white",
      "color": "blue500",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray4",
      "bgChecked": undefined,
      "bgDisabled": "white",
      "color": "blue500",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": undefined,
      "borderColor": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": undefined,
      "borderColor": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": undefined,
      "borderColor": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "white",
      "bgActive": "gray8",
      "bgChecked": undefined,
      "bgDisabled": undefined,
      "borderColor": "gray8",
      "color": "black",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "black",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray68",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "black",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray68",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "black",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray68",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "black",
      "bgActive": "gray76",
      "bgChecked": undefined,
      "bgDisabled": "gray68",
      "colorDisabled": "gray40",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked loading 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked loading=false 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked=false loading 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked=false loading=false 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue50",
      "bgActive": "blue100",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue50",
      "bgActive": "blue100",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue50",
      "bgActive": "blue100",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue50",
      "bgActive": "blue100",
      "bgChecked": undefined,
      "bgDisabled": "gray4",
      "color": "blue500",
      "colorDisabled": "gray48",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="l" multiline 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
}
`;

exports[`mobile theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="m" multiline 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="s" multiline 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pr": 12,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pl": 12,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 8,
      "pl": 12,
      "pr": 12,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Button fuzz: size="m" children="text" 1`] = `Object {}`;

exports[`mobile theme Button fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "props": Object {
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "pr": 12,
    },
  },
  "Text": Object {
    "props": Object {
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "Text": Object {
    "props": Object {
      "ml": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "pl": 12,
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "props": Object {
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "pl": 12,
      "pr": 12,
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pr": 12,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pl": 12,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 4,
      "pl": 12,
      "pr": 12,
      "pt": 4,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`mobile theme Button snap 1`] = `
Object {
  "defaultProps": Object {
    "preset": "primary",
    "size": "m",
    "type": "button",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Object {
      "iconAfter": Object {
        "children": Object {
          "style": Object {
            "pr": 12,
          },
        },
      },
      "iconBefore": Object {
        "children": Object {
          "style": Object {
            "pl": 12,
          },
        },
      },
      "kind": Object {
        "fill": Object {
          "style": Object {
            "bg": "blue50",
            "bgActive": "blue70",
            "bgChecked": "blue70",
            "bgDisabled": "blue30",
            "bgHover": "blue60",
            "color": "white",
            "colorDisabled": "gray30",
          },
          "variant": Object {
            "error": Object {
              "style": Object {
                "bg": "red50",
                "bgActive": "red70",
                "bgChecked": "red70",
                "bgDisabled": "red30",
                "bgHover": "red60",
              },
            },
            "primary": Object {
              "style": Object {
                "bg": "blue50",
                "bgActive": "blue70",
                "bgChecked": "blue70",
                "bgDisabled": "blue30",
                "bgHover": "blue60",
              },
            },
            "secondary": Object {
              "style": Object {
                "bg": "gray50",
                "bgActive": "gray70",
                "bgChecked": "gray70",
                "bgDisabled": "gray30",
                "bgHover": "gray60",
                "color": "black",
                "colorDisabled": "gray70",
              },
            },
            "success": Object {
              "style": Object {
                "bg": "green50",
                "bgActive": "green70",
                "bgChecked": "green70",
                "bgDisabled": "green30",
                "bgHover": "green60",
              },
            },
            "warning": Object {
              "style": Object {
                "bg": "yellow50",
                "bgActive": "yellow70",
                "bgChecked": "yellow70",
                "bgDisabled": "yellow30",
                "bgHover": "yellow60",
                "color": "black",
                "colorDisabled": "gray70",
              },
            },
          },
        },
        "flat": Object {
          "style": Object {
            "bg": "gray30",
            "bgActive": "gray50",
            "bgChecked": "gray30",
            "bgHover": "gray40",
            "borderColor": "gray30",
            "borderColorActive": "gra50",
            "borderColorDisabled": "gray20",
            "borderColorHover": "gray40",
          },
          "variant": Object {
            "error": Object {
              "style": Object {
                "color": "red50",
                "colorActive": "red70",
                "colorDisabled": "red30",
                "colorHover": "red60",
              },
            },
            "primary": Object {
              "style": Object {
                "color": "blue50",
                "colorActive": "blue70",
                "colorDisabled": "blue30",
                "colorHover": "blue60",
              },
            },
            "secondary": Object {
              "style": Object {
                "color": "gray50",
                "colorActive": "gray70",
                "colorDisabled": "gray30",
                "colorHover": "gray60",
              },
            },
            "success": Object {
              "style": Object {
                "color": "green50",
                "colorActive": "green70",
                "colorDisabled": "green30",
                "colorHover": "green60",
              },
            },
            "warning": Object {
              "style": Object {
                "color": "yellow50",
                "colorActive": "yellow70",
                "colorDisabled": "yellow30",
                "colorHover": "yellow60",
              },
            },
          },
        },
        "outline": Object {
          "style": Object {
            "bg": "gray32",
            "bgActive": "gray52",
            "bgChecked": "gray32",
            "bgHover": "gray40",
            "borderColor": "gray32",
            "borderColorActive": "gra52",
            "borderColorDisabled": "gray24",
            "borderColorHover": "gray40",
          },
          "variant": Object {
            "error": Object {
              "style": Object {
                "color": "red50",
                "colorActive": "red70",
                "colorDisabled": "red30",
                "colorHover": "red60",
              },
            },
            "primary": Object {
              "checked": Object {
                "style": Object {
                  "bg": "red300",
                  "color": "red500",
                  "colorActive": "red700",
                  "colorDisabled": "red300",
                  "colorHover": "red600",
                },
              },
              "style": Object {
                "color": "blue500",
                "colorActive": "blue700",
                "colorDisabled": "blue300",
                "colorHover": "blue600",
              },
            },
            "secondary": Object {
              "style": Object {
                "color": "gray50",
                "colorActive": "gray70",
                "colorDisabled": "gray30",
                "colorHover": "gray60",
              },
            },
            "success": Object {
              "style": Object {
                "color": "green50",
                "colorActive": "green70",
                "colorDisabled": "green30",
                "colorHover": "green60",
              },
            },
            "warning": Object {
              "style": Object {
                "color": "yellow50",
                "colorActive": "yellow70",
                "colorDisabled": "yellow30",
                "colorHover": "yellow60",
              },
            },
          },
        },
      },
      "preset": Object {
        "accent": Object {
          "style": Object {
            "bg": "green500",
            "bgActive": "green800",
            "bgDisabled": "gray4",
            "color": "white",
            "colorDisabled": "gray48",
          },
        },
        "appInstall": Object {
          "style": Object {
            "bg": "gray4",
            "bgActive": "gray8",
            "bgDisabled": "gray4",
            "color": "blue500",
            "colorDisabled": "gray48",
          },
        },
        "default": Object {
          "checked": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue800",
              "bgDisabled": "blue300",
              "color": "white",
              "colorDisabled": "blue50",
            },
          },
          "style": Object {
            "bg": "gray4",
            "bgActive": "gray8",
            "bgDisabled": "gray4",
            "color": "black",
            "colorDisabled": "gray48",
          },
        },
        "defaultDark": Object {
          "style": Object {
            "bg": "gray68",
            "bgActive": "gray76",
            "bgDisabled": "gray76",
            "color": "white",
            "colorDisabled": "gray40",
          },
        },
        "defaultOnSurface": Object {
          "style": Object {
            "bg": "gray8",
            "bgActive": "gray12",
            "bgDisabled": "gray8",
            "color": "black",
            "colorDisabled": "gray48",
          },
        },
        "linkIncreased": Object {
          "style": Object {
            "bg": "white",
            "bgActive": "gray4",
            "bgDisabled": "white",
            "color": "blue500",
            "colorDisabled": "gray40",
          },
        },
        "outline": Object {
          "style": Object {
            "bg": "white",
            "bgActive": "gray8",
            "borderColor": "gray8",
            "color": "black",
            "colorDisabled": "gray48",
          },
        },
        "pay": Object {
          "style": Object {
            "bg": "black",
            "bgActive": "gray76",
            "bgDisabled": "gray68",
            "color": "white",
            "colorDisabled": "gray40",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "blue500",
            "bgActive": "blue600",
            "bgChecked": "blue600",
            "bgDisabled": "blue300",
            "color": "white",
            "colorDisabled": "blue50",
          },
        },
        "secondary": Object {
          "style": Object {
            "bg": "blue50",
            "bgActive": "blue100",
            "bgDisabled": "gray4",
            "color": "blue500",
            "colorDisabled": "gray48",
          },
        },
      },
      "size": Object {
        "l": Object {
          "style": Object {
            "minHeight": "l",
            "pb": 8,
            "pt": 8,
          },
        },
        "m": Object {
          "style": Object {
            "minHeight": "m",
            "pb": 6,
            "pt": 6,
          },
        },
        "s": Object {
          "style": Object {
            "minHeight": "s",
            "pb": 4,
            "pt": 4,
          },
        },
      },
      "style": Object {
        "borderColor": "transparent",
        "borderRadius": 5,
        "borderStyle": "solid",
        "borderWidth": 1,
        "focus": false,
        "pl": 16,
        "pr": 16,
      },
    },
    "IconAfter": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "IconBefore": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "Spinner": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "l",
          },
        },
        "m": Object {
          "props": Object {
            "size": "m",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "Text": Object {
      "iconAfter": Object {
        "props": Object {
          "mr": 6,
        },
      },
      "iconBefore": Object {
        "props": Object {
          "ml": 6,
        },
      },
      "kind": Object {
        "flat": Object {
          "props": Object {
            "uppercase": true,
          },
        },
      },
      "props": Object {
        "crop": true,
        "dense": true,
        "ml": -1,
        "size": "m",
        "valignSelf": "middle",
      },
    },
  },
}
`;

exports[`mobile theme Card base 1`] = `
Object {
  "Card": Object {
    "component": null,
    "props": Object {
      "block": true,
      "rounded": 5,
    },
    "style": Object {},
  },
  "Close": Object {
    "component": #IconCross,
    "props": Object {
      "bgActive": "black16",
      "bgHover": "black8",
      "color": "gray28",
      "pb": 4,
      "pl": 4,
      "position": "absolute",
      "pr": 4,
      "pt": 4,
      "right": 4,
      "rounded": "circle",
      "size": "s",
      "top": 4,
    },
    "style": Object {},
  },
  "Content": Object {
    "component": null,
    "props": Object {
      "pb": 10,
      "pl": 10,
      "pr": 10,
      "pt": 10,
    },
    "style": Object {},
  },
  "Image": Object {
    "component": null,
    "props": Object {
      "order": 1,
    },
    "style": Object {},
  },
}
`;

exports[`mobile theme Card fuzz: column 1`] = `
Object {
  "Image": Object {
    "props": Object {
      "order": 0,
    },
  },
}
`;

exports[`mobile theme Card fuzz: column=false 1`] = `Object {}`;

exports[`mobile theme Card snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Object {
      "props": Object {
        "block": true,
        "rounded": 5,
      },
    },
    "Close": Object {
      "component": #IconCross,
      "props": Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "pb": 4,
        "pl": 4,
        "position": "absolute",
        "pr": 4,
        "pt": 4,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
      },
    },
    "Content": Object {
      "props": Object {
        "pb": 10,
        "pl": 10,
        "pr": 10,
        "pt": 10,
      },
    },
    "Image": Object {
      "column": Object {
        "props": Object {
          "order": 0,
        },
      },
      "props": Object {
        "order": 1,
      },
    },
  },
}
`;

exports[`mobile theme Checkbox base 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "ml": 16,
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked indeterminate 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxIndeterminate,
  },
  "Switch": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked indeterminate=false 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="error" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="primary" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="secondary" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "gray48",
      "bgActive": "gray56",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="success" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="warning" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked=false indeterminate 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxIndeterminate,
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked=false indeterminate=false 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: checked=false variant="error" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: checked=false variant="primary" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: checked=false variant="secondary" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: checked=false variant="success" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: checked=false variant="warning" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: size="l" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: size="s" 1`] = `Object {}`;

exports[`mobile theme Checkbox snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Object {
      "checked": Object {
        "component": #IconCheckboxChecked,
      },
      "indeterminate": Object {
        "component": #IconCheckboxIndeterminate,
      },
    },
    "Label": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray48",
        },
      },
      "labelPosition": Object {
        "end": Object {
          "props": Object {
            "ml": 16,
          },
        },
        "start": Object {
          "props": Object {
            "mr": 16,
          },
        },
      },
      "props": Object {
        "size": "m",
      },
    },
    "Switch": Object {
      "checked": Object {
        "style": Object {
          "bgDisabled": "gray28",
        },
        "variant": Object {
          "error": Object {
            "style": Object {
              "bg": "red500",
              "bgActive": "red700",
            },
          },
          "primary": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue700",
            },
          },
          "secondary": Object {
            "style": Object {
              "bg": "gray48",
              "bgActive": "gray56",
            },
          },
          "success": Object {
            "style": Object {
              "bg": "green500",
              "bgActive": "green700",
            },
          },
          "warning": Object {
            "style": Object {
              "bg": "orange500",
              "bgActive": "orange700",
            },
          },
        },
      },
      "style": Object {
        "bg": "gray8",
        "bgActive": "gray12",
        "bgDisabled": "gray4",
        "borderRadius": 2,
        "color": "white",
        "height": 18,
      },
    },
    "Toggle": Object {},
  },
}
`;

exports[`mobile theme Icon base 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "height": 20,
    },
  },
}
`;

exports[`mobile theme Icon fuzz: size="l" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "height": 24,
    },
  },
}
`;

exports[`mobile theme Icon fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Icon fuzz: size="s" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "height": 16,
    },
  },
}
`;

exports[`mobile theme Icon fuzz: size="xl" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "height": 28,
    },
  },
}
`;

exports[`mobile theme Icon fuzz: variant="error" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "color": "red500",
    },
  },
}
`;

exports[`mobile theme Icon fuzz: variant="primary" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "color": "blue500",
    },
  },
}
`;

exports[`mobile theme Icon fuzz: variant="secondary" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "color": "gray52",
    },
  },
}
`;

exports[`mobile theme Icon fuzz: variant="success" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "color": "green500",
    },
  },
}
`;

exports[`mobile theme Icon fuzz: variant="warning" 1`] = `
Object {
  "Icon": Object {
    "style": Object {
      "color": "yellow500",
    },
  },
}
`;

exports[`mobile theme Icon snap 1`] = `
Object {
  "defaultProps": Object {
    "size": "m",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Object {
      "size": Object {
        "l": Object {
          "style": Object {
            "height": 24,
          },
        },
        "m": Object {
          "style": Object {
            "height": 20,
          },
        },
        "s": Object {
          "style": Object {
            "height": 16,
          },
        },
        "xl": Object {
          "style": Object {
            "height": 28,
          },
        },
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "color": "red500",
          },
        },
        "primary": Object {
          "style": Object {
            "color": "blue500",
          },
        },
        "secondary": Object {
          "style": Object {
            "color": "gray52",
          },
        },
        "success": Object {
          "style": Object {
            "color": "green500",
          },
        },
        "warning": Object {
          "style": Object {
            "color": "yellow500",
          },
        },
      },
    },
  },
}
`;

exports[`mobile theme Image base 1`] = `
Object {
  "Image": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme Image snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Image": Object {},
  },
}
`;

exports[`mobile theme Input base 1`] = `
Object {
  "IconAfter": Object {
    "component": null,
    "props": Object {
      "color": "gray28",
      "ml": 10,
      "mr": 10,
    },
    "style": Object {},
  },
  "IconBefore": Object {
    "component": null,
    "props": Object {
      "color": "gray28",
      "ml": 10,
      "mr": 8,
      "size": "s",
    },
    "style": Object {},
  },
  "Input": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray4",
      "borderRadius": 5,
      "color": "black",
      "colorDisabled": "gray40",
      "focus": true,
      "fontSize": 16,
      "height": "m",
      "placeholderColor": "gray48",
    },
  },
  "InputField": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "pl": 16,
      "pr": 16,
    },
  },
  "Postfix": Object {
    "component": null,
    "props": Object {
      "ml": 4,
    },
    "style": Object {},
  },
  "Prefix": Object {
    "component": null,
    "props": Object {
      "mr": 4,
    },
    "style": Object {},
  },
}
`;

exports[`mobile theme Input fuzz: clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "component": #IconCross,
    "props": Object {
      "area": 10,
      "size": "s",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="l" 1`] = `
Object {
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "height": "l",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "height": "l",
    },
  },
  "InputField": Object {
    "style": Object {
      "pr": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "height": "l",
    },
  },
  "InputField": Object {
    "style": Object {
      "pl": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "height": "l",
    },
  },
  "InputField": Object {
    "style": Object {
      "pl": "none",
      "pr": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Input fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "InputField": Object {
    "style": Object {
      "pr": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "InputField": Object {
    "style": Object {
      "pl": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "InputField": Object {
    "style": Object {
      "pl": "none",
      "pr": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="s" 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 8,
      "mr": 8,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": 12,
      "height": "s",
    },
  },
  "InputField": Object {
    "style": Object {
      "pl": 12,
      "pr": 12,
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 8,
      "mr": 8,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": 12,
      "height": "s",
    },
  },
  "InputField": Object {
    "style": Object {
      "pl": 12,
      "pr": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 8,
      "mr": 8,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": 12,
      "height": "s",
    },
  },
  "InputField": Object {
    "style": Object {
      "pl": "none",
      "pr": 12,
    },
  },
}
`;

exports[`mobile theme Input fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 8,
      "mr": 8,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": 12,
      "height": "s",
    },
  },
  "InputField": Object {
    "style": Object {
      "pl": "none",
      "pr": "none",
    },
  },
}
`;

exports[`mobile theme Input fuzz: value="value" 1`] = `Object {}`;

exports[`mobile theme Input fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "component": #IconCross,
    "props": Object {
      "area": 10,
      "size": "s",
    },
  },
}
`;

exports[`mobile theme Input fuzz: variant="error" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "red50",
    },
  },
}
`;

exports[`mobile theme Input fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Input fuzz: variant="secondary" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "gray8",
    },
  },
}
`;

exports[`mobile theme Input fuzz: variant="success" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "green50",
    },
  },
}
`;

exports[`mobile theme Input fuzz: variant="warning" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "orange50",
    },
  },
}
`;

exports[`mobile theme Input snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "kind": "fill",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconAfter": Object {
      "clearable": Object {
        "component": #IconCross,
        "props": Object {
          "area": 10,
          "size": [Function],
        },
      },
      "props": Object {
        "color": "gray28",
      },
      "size": Object {
        "l": Object {
          "props": Object {
            "ml": 10,
            "mr": 10,
          },
        },
        "m": Object {
          "props": Object {
            "ml": 10,
            "mr": 10,
          },
        },
        "s": Object {
          "props": Object {
            "ml": 8,
            "mr": 8,
          },
        },
      },
    },
    "IconBefore": Object {
      "props": Object {
        "color": "gray28",
        "ml": 10,
        "mr": 8,
        "size": [Function],
      },
    },
    "Input": Object {
      "size": Object {
        "l": Object {
          "style": Object {
            "fontSize": 16,
          },
        },
        "m": Object {
          "style": Object {
            "fontSize": 16,
          },
        },
        "s": Object {
          "style": Object {
            "fontSize": 12,
          },
        },
      },
      "style": Object {
        "borderRadius": 5,
        "color": "black",
        "colorDisabled": "gray40",
        "focus": true,
        "height": [Function],
        "placeholderColor": "gray48",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "bg": "red50",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "gray4",
          },
        },
        "secondary": Object {
          "style": Object {
            "bg": "gray8",
          },
        },
        "success": Object {
          "style": Object {
            "bg": "green50",
          },
        },
        "warning": Object {
          "style": Object {
            "bg": "orange50",
          },
        },
      },
    },
    "InputField": Object {
      "iconAfter": Object {
        "style": Object {
          "pr": "none",
        },
      },
      "iconBefore": Object {
        "style": Object {
          "pl": "none",
        },
      },
      "size": Object {
        "l": Object {
          "style": Object {
            "pl": 16,
            "pr": 16,
          },
        },
        "m": Object {
          "style": Object {
            "pl": 16,
            "pr": 16,
          },
        },
        "s": Object {
          "style": Object {
            "pl": 12,
            "pr": 12,
          },
        },
      },
    },
    "Postfix": Object {
      "props": Object {
        "ml": 4,
      },
    },
    "Prefix": Object {
      "props": Object {
        "mr": 4,
      },
    },
  },
}
`;

exports[`mobile theme Link base 1`] = `
Object {
  "Link": Object {
    "component": null,
    "props": Object {
      "color": "blue500",
      "colorVisited": "purple600",
    },
    "style": Object {},
  },
}
`;

exports[`mobile theme Link fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Link fuzz: variant="secondary" 1`] = `
Object {
  "Link": Object {
    "props": Object {
      "color": "gray52",
    },
  },
}
`;

exports[`mobile theme Link snap 1`] = `
Object {
  "defaultProps": Object {
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Link": Object {
      "props": Object {
        "colorVisited": "purple600",
      },
      "variant": Object {
        "primary": Object {
          "props": Object {
            "color": "blue500",
          },
        },
        "secondary": Object {
          "props": Object {
            "color": "gray52",
          },
        },
      },
    },
  },
}
`;

exports[`mobile theme ListItem base 1`] = `
Object {
  "After": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Before": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Caption": Object {
    "component": null,
    "props": Object {
      "color": "gray40",
      "size": "s",
    },
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Link": Object {
    "component": null,
    "props": Object {
      "size": "s",
    },
    "style": Object {},
  },
  "ListItem": Object {
    "component": null,
    "props": Object {
      "minHeight": 52,
      "pb": 12,
      "pl": 16,
      "pr": 16,
      "pt": 10,
      "spacing": 16,
      "valign": "middle",
    },
    "style": Object {},
  },
  "StackText": Object {
    "component": null,
    "props": Object {
      "spacing": 2,
    },
    "style": Object {},
  },
}
`;

exports[`mobile theme ListItem fuzz: disabled 1`] = `
Object {
  "Caption": Object {
    "props": Object {
      "color": "gray32",
    },
  },
  "Label": Object {
    "props": Object {
      "color": "gray48",
    },
  },
}
`;

exports[`mobile theme ListItem fuzz: onClick=undefined 1`] = `
Object {
  "ListItem": Object {
    "props": Object {
      "bgActive": "gray4",
    },
  },
}
`;

exports[`mobile theme ListItem snap 1`] = `
Object {
  "defaultProps": Object {
    "afterTreshold": 82,
    "beforeTreshold": 82,
  },
  "mapProps": [Function],
  "scheme": Object {
    "After": Object {
      "props": Object {},
    },
    "Before": Object {
      "props": Object {},
    },
    "Caption": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray32",
        },
      },
      "props": Object {
        "color": "gray40",
        "size": "s",
      },
    },
    "Label": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray48",
        },
      },
      "props": Object {
        "size": "m",
      },
    },
    "Link": Object {
      "props": Object {
        "size": "s",
      },
    },
    "ListItem": Object {
      "onClick": Object {
        "props": Object {
          "bgActive": "gray4",
        },
      },
      "props": Object {
        "minHeight": 52,
        "pb": 12,
        "pl": 16,
        "pr": 16,
        "pt": 10,
        "spacing": 16,
        "valign": "middle",
      },
    },
    "StackText": Object {
      "props": Object {
        "spacing": 2,
      },
    },
  },
}
`;

exports[`mobile theme Radio base 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "ml": 16,
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": false,
      "height": 18,
      "ml": 1,
      "mr": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme Radio fuzz: size="l" 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: size="s" 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: variant="error" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Radio fuzz: variant="error" checked=false 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: variant="primary" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Radio fuzz: variant="primary" checked=false 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: variant="secondary" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "gray48",
      "bgActive": "gray56",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Radio fuzz: variant="secondary" checked=false 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: variant="success" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Radio fuzz: variant="success" checked=false 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: variant="warning" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Radio fuzz: variant="warning" checked=false 1`] = `Object {}`;

exports[`mobile theme Radio snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Object {
      "checked": Object {
        "component": #IconRadioChecked,
      },
    },
    "Label": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray48",
        },
      },
      "labelPosition": Object {
        "end": Object {
          "props": Object {
            "ml": 16,
          },
        },
        "start": Object {
          "props": Object {
            "mr": 16,
          },
        },
      },
      "props": Object {
        "size": "m",
      },
    },
    "Switch": Object {
      "checked": Object {
        "style": Object {
          "bgDisabled": "gray28",
        },
        "variant": Object {
          "error": Object {
            "style": Object {
              "bg": "red500",
              "bgActive": "red700",
            },
          },
          "primary": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue700",
            },
          },
          "secondary": Object {
            "style": Object {
              "bg": "gray48",
              "bgActive": "gray56",
            },
          },
          "success": Object {
            "style": Object {
              "bg": "green500",
              "bgActive": "green700",
            },
          },
          "warning": Object {
            "style": Object {
              "bg": "orange500",
              "bgActive": "orange700",
            },
          },
        },
      },
      "style": Object {
        "bg": "gray8",
        "bgActive": "gray12",
        "bgDisabled": "gray4",
        "color": "white",
        "focus": false,
        "height": 18,
        "ml": 1,
        "mr": 1,
      },
    },
    "Toggle": Object {},
  },
}
`;

exports[`mobile theme SegmentButton base 1`] = `
Object {
  "Button": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "borderRadius": 5,
      "color": "gray48",
      "colorChecked": "black",
      "colorDisabled": "gray24",
      "focus": true,
    },
  },
  "Group": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray4",
      "borderRadius": 5,
      "height": 44,
      "pb": 4,
      "pl": 4,
      "pr": 4,
      "pt": 4,
    },
  },
  "Slide": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "white",
      "borderRadius": 5,
    },
  },
}
`;

exports[`mobile theme SegmentButton fuzz: size="l" 1`] = `
Object {
  "Group": Object {
    "style": Object {
      "height": 50,
    },
  },
}
`;

exports[`mobile theme SegmentButton fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme SegmentButton fuzz: size="s" 1`] = `
Object {
  "Group": Object {
    "style": Object {
      "height": 32,
    },
  },
}
`;

exports[`mobile theme SegmentButton snap 1`] = `
Object {
  "defaultProps": Object {
    "size": "m",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Object {
      "style": Object {
        "borderRadius": 5,
        "color": "gray48",
        "colorChecked": "black",
        "colorDisabled": "gray24",
        "focus": true,
      },
    },
    "Group": Object {
      "size": Object {
        "l": Object {
          "style": Object {
            "borderRadius": 5,
            "height": 50,
            "pb": 4,
            "pl": 4,
            "pr": 4,
            "pt": 4,
          },
        },
        "m": Object {
          "style": Object {
            "borderRadius": 5,
            "height": 44,
            "pb": 4,
            "pl": 4,
            "pr": 4,
            "pt": 4,
          },
        },
        "s": Object {
          "style": Object {
            "borderRadius": 5,
            "height": 32,
            "pb": 4,
            "pl": 4,
            "pr": 4,
            "pt": 4,
          },
        },
      },
      "style": Object {
        "bg": "gray4",
      },
    },
    "Slide": Object {
      "style": Object {
        "bg": "white",
        "borderRadius": 5,
      },
    },
  },
}
`;

exports[`mobile theme Spinner base 1`] = `
Object {
  "Spinner": Object {
    "component": #IconSpinner,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme Spinner fuzz: size="l" 1`] = `
Object {
  "Spinner": Object {
    "props": Object {
      "size": 32,
    },
  },
}
`;

exports[`mobile theme Spinner fuzz: size="m" 1`] = `
Object {
  "Spinner": Object {
    "props": Object {
      "size": 24,
    },
  },
}
`;

exports[`mobile theme Spinner fuzz: size="s" 1`] = `
Object {
  "Spinner": Object {
    "props": Object {
      "size": 16,
    },
  },
}
`;

exports[`mobile theme Spinner fuzz: variant="error" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="secondary" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="success" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="warning" 1`] = `Object {}`;

exports[`mobile theme Spinner snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Spinner": Object {
      "component": #IconSpinner,
      "size": Object {
        "l": Object {
          "props": Object {
            "size": 32,
          },
        },
        "m": Object {
          "props": Object {
            "size": 24,
          },
        },
        "s": Object {
          "props": Object {
            "size": 16,
          },
        },
      },
    },
  },
}
`;

exports[`mobile theme Switcher base 1`] = `
Object {
  "Icon": Object {
    "component": #IconSwitcher,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "ml": 16,
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray12",
      "bgActive": "gray28",
      "bgDisabled": "gray8",
      "color": "white",
      "focus": true,
      "height": 25,
      "pb": 3,
      "pl": 3,
      "pr": 3,
      "pt": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading disabled 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Label": Object {
    "props": Object {
      "color": "gray48",
    },
  },
  "Switch": Object {
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading disabled=false 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Switch": Object {
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading=false disabled 1`] = `
Object {
  "Label": Object {
    "props": Object {
      "color": "gray48",
    },
  },
  "Switch": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue300",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading=false disabled=false 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue300",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading disabled 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Label": Object {
    "props": Object {
      "color": "gray48",
    },
  },
  "Switch": Object {
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading disabled=false 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Switch": Object {
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading=false disabled 1`] = `
Object {
  "Label": Object {
    "props": Object {
      "color": "gray48",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading=false disabled=false 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: size="l" 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: size="s" 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: variant="error" checked 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="error" checked=false 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bgDisabled": "gray4",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="primary" checked 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue300",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="primary" checked=false 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: variant="secondary" checked 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bg": "gray48",
      "bgActive": "gray56",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="secondary" checked=false 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bgDisabled": "gray4",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="success" checked 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="success" checked=false 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bgDisabled": "gray4",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="warning" checked 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "gray28",
    },
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="warning" checked=false 1`] = `
Object {
  "Switch": Object {
    "style": Object {
      "bgDisabled": "gray4",
    },
  },
}
`;

exports[`mobile theme Switcher snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "positionLoading": false,
    "shape": "pill",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Object {
      "component": #IconSwitcher,
      "loading": Object {
        "component": #Spinner,
      },
    },
    "Label": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray48",
        },
      },
      "labelPosition": Object {
        "end": Object {
          "props": Object {
            "ml": 16,
          },
        },
        "start": Object {
          "props": Object {
            "mr": 16,
          },
        },
      },
      "props": Object {
        "size": "m",
      },
    },
    "Switch": Object {
      "checked": Object {
        "style": Object {
          "bgDisabled": "gray28",
        },
        "variant": Object {
          "error": Object {
            "style": Object {
              "bg": "red500",
              "bgActive": "red700",
            },
          },
          "primary": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue700",
              "bgDisabled": "blue300",
            },
          },
          "secondary": Object {
            "style": Object {
              "bg": "gray48",
              "bgActive": "gray56",
            },
          },
          "success": Object {
            "style": Object {
              "bg": "green500",
              "bgActive": "green700",
            },
          },
          "warning": Object {
            "style": Object {
              "bg": "orange500",
              "bgActive": "orange700",
            },
          },
        },
      },
      "loading": Object {
        "style": Object {
          "align": "center",
          "bg": "transparent",
          "bgActive": "transparent",
          "bgDisabled": "transparent",
          "color": "gray28",
          "focus": false,
        },
      },
      "style": Object {
        "bg": "gray12",
        "bgActive": "gray28",
        "bgDisabled": "gray4",
        "color": "white",
        "focus": true,
        "height": 25,
        "pb": 3,
        "pl": 3,
        "pr": 3,
        "pt": 3,
        "width": 48,
      },
      "variant": Object {
        "primary": Object {
          "style": Object {
            "bgDisabled": "gray8",
          },
        },
      },
    },
    "Toggle": Object {},
  },
}
`;

exports[`mobile theme Text base 1`] = `
Object {
  "Text": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "fontSize": undefined,
      "lineHeight": "normal",
    },
  },
}
`;

exports[`mobile theme Text fuzz: dense 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "lineHeight": "dense",
    },
  },
}
`;

exports[`mobile theme Text fuzz: preset="heading" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "l",
      "lineHeight": "dense",
    },
  },
}
`;

exports[`mobile theme Text fuzz: preset="heading-large" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "l",
      "lineHeight": "dense",
    },
  },
}
`;

exports[`mobile theme Text fuzz: preset="heading-small" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "m",
    },
  },
}
`;

exports[`mobile theme Text fuzz: preset="title" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "xxl",
    },
  },
}
`;

exports[`mobile theme Text fuzz: preset="title-small" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "xl",
      "lineHeight": "dense",
    },
  },
}
`;

exports[`mobile theme Text fuzz: size="l" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "l",
    },
  },
}
`;

exports[`mobile theme Text fuzz: size="m" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "m",
    },
  },
}
`;

exports[`mobile theme Text fuzz: size="s" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "s",
    },
  },
}
`;

exports[`mobile theme Text fuzz: variant="error" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "red500",
    },
  },
}
`;

exports[`mobile theme Text fuzz: variant="primary" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "blue500",
    },
  },
}
`;

exports[`mobile theme Text fuzz: variant="secondary" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "gray52",
    },
  },
}
`;

exports[`mobile theme Text fuzz: variant="success" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "green500",
    },
  },
}
`;

exports[`mobile theme Text fuzz: variant="warning" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "yellow500",
    },
  },
}
`;

exports[`mobile theme Text snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Text": Object {
      "dense": Object {
        "style": Object {
          "lineHeight": "dense",
        },
      },
      "style": Object {
        "fontSize": [Function],
        "lineHeight": "normal",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "color": "red500",
          },
        },
        "primary": Object {
          "style": Object {
            "color": "blue500",
          },
        },
        "secondary": Object {
          "style": Object {
            "color": "gray52",
          },
        },
        "success": Object {
          "style": Object {
            "color": "green500",
          },
        },
        "warning": Object {
          "style": Object {
            "color": "yellow500",
          },
        },
      },
    },
  },
}
`;

exports[`mobile theme Textarea base 1`] = `
Object {
  "IconClear": Object {
    "component": #IconCross,
    "props": Object {
      "area": 10,
      "color": "gray28",
      "size": "m",
      "visible": false,
    },
    "style": Object {},
  },
  "Textarea": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray4",
      "borderRadius": 5,
      "color": "black",
      "colorDisabled": "gray40",
      "focus": true,
      "fontSize": 16,
      "lineHeight": "normal",
      "minHeight": "m",
      "pb": 12,
      "pl": 16,
      "placeholderColor": "gray48",
      "pr": 16,
      "pt": 12,
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "visible": true,
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: size="l" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Textarea": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 16,
      "pt": 16,
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Textarea fuzz: size="s" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Textarea": Object {
    "style": Object {
      "fontSize": 12,
      "minHeight": "s",
      "pb": 10,
      "pl": 12,
      "pr": 12,
      "pt": 10,
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: value="value" 1`] = `Object {}`;

exports[`mobile theme Textarea fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "visible": true,
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="error" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "red100",
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Textarea fuzz: variant="secondary" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "gray8",
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="success" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "green100",
    },
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="warning" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "orange100",
    },
  },
}
`;

exports[`mobile theme Textarea snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconClear": Object {
      "component": #IconCross,
      "props": Object {
        "area": 10,
        "color": "gray28",
        "size": [Function],
        "visible": [Function],
      },
    },
    "Textarea": Object {
      "size": Object {
        "l": Object {
          "style": Object {
            "fontSize": 16,
            "pb": 16,
            "pl": 16,
            "pr": 16,
            "pt": 16,
          },
        },
        "m": Object {
          "style": Object {
            "fontSize": 16,
            "pb": 12,
            "pl": 16,
            "pr": 16,
            "pt": 12,
          },
        },
        "s": Object {
          "style": Object {
            "fontSize": 12,
            "pb": 10,
            "pl": 12,
            "pr": 12,
            "pt": 10,
          },
        },
      },
      "style": Object {
        "borderRadius": 5,
        "color": "black",
        "colorDisabled": "gray40",
        "focus": true,
        "lineHeight": "normal",
        "minHeight": [Function],
        "placeholderColor": "gray48",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "bg": "red100",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "gray4",
          },
        },
        "secondary": Object {
          "style": Object {
            "bg": "gray8",
          },
        },
        "success": Object {
          "style": Object {
            "bg": "green100",
          },
        },
        "warning": Object {
          "style": Object {
            "bg": "orange100",
          },
        },
      },
    },
  },
}
`;
